# push

./: README.md  docker-compose.yml  env-docker-compose.yml
consumer/: Cargo.toml  Dockerfile
consumer/src/: main.rs
consumer/src/config/: mod.rs
consumer/src/email/: mod.rs
consumer/src/html_templates/: alert.rs  critical.rs  mod.rs  report.rs
consumer/src/message/: mod.rs
consumer/src/notification/: mod.rs
consumer/src/pool/: mod.rs
consumer/src/repository/: rabbitmq.rs
notifications-api-consumer/: Cargo.toml
notifications-api-consumer/src/: main.rs
notifications-api-consumer/src/html_templates/: alert.rs  critical.rs  mod.rs  report.rs
notifications-api-publisher/: Cargo.toml
notifications-api-publisher/src/: main.rs
publisher/: Cargo.toml  Dockerfile
publisher/src/: main.rs
publisher/src/config/: mod.rs
publisher/src/notification/: mod.rs
publisher/src/pool/: mod.rs
