[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.33.0", features=["full"] }
reqwest = {version="0.11.22", features=["json"]}
serde = "1.0"
serde_json = "1.0"
bb8 = "0.8.1"
bb8-lapin = "0.5.0"
lapin = { version = "2.3.1" }
async-trait = "0.1.74"
futures-lite = "2.1.0"