[package]
name = "notifications-api-consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqprs = "1.5.1"
tokio = { version="1.33.0", features=["full"] }
reqwest = {version="0.11.22", features=["json"]}
serde = "1.0"
serde_json = "1.0"
