[package]
name = "publisher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.33.0", features = ["full"] }
chrono = "0.4"
bb8 = "0.8.1"
bb8-lapin = "0.5.0"
lapin = { version = "2.3.1" }
async-trait = "0.1.74"
